k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indic-nlp
  namespace: indic-nlp
  labels:
    app: indic-nlp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: indic-nlp
  template:
    metadata:
      labels:
        app: indic-nlp
    spec:
      containers:
      - name: indic-nlp
        image: harshitrai20/indie-nlp:latest         # ← CHANGE THIS
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1500m"
            memory: "2Gi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
